Add index-box3.js and images; began setting up js

--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,13 @@ button:hover {
 }
 
 .delete {
-  background-image: url("../images/delete.svg");
+  background-image: url("images/delete.svg");
   display: inline-block;
   float: right;
 }
 
 .delete:hover {
-  background-image: url("../images/delete-hover.svg");
+  background-image: url("images/delete-hover.svg");
 }
 
 .card-body {
@@ -160,23 +160,23 @@ button:hover {
 }
 
 .upvote {
-  background-image: url("../images/upvote.svg");
+  background-image: url("images/upvote.svg");
   display: inline-block;
   margin-right: 15px;
 }
 
 .upvote:hover {
-  background-image: url("../images/upvote-hover.svg");
+  background-image: url("images/upvote-hover.svg");
 }
 
 .downvote {
-  background-image: url("../images/downvote.svg");
+  background-image: url("images/downvote.svg");
   display: inline-block;
   margin-right: 15px;
 }
 
 .downvote:hover {
-  background-image: url("../images/downvote-hover.svg");
+  background-image: url("images/downvote-hover.svg");
 }
 
 .card-quality {
